clusters/main/kubernetes/flux-system/flux/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: fiveoseven
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd,traefik-cloud-only@kubernetescrd
spec:
  rules:
  - host: flux-webhook.${BASE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 9292
  tls:
  - hosts:
    - flux-webhook.${BASE_DOMAIN}
    secretName: flux-system-webhook-tls
